updated plots and code

--- a/list_elites.tex
+++ b/list_elites.tex
@@ -1,162 +1,156 @@
-% latex table generated in R 3.4.4 by xtable 1.8-2 package
-% Thu May 31 13:20:50 2018
-\begin{longtable}{ll}
+% latex table generated in R 3.6.1 by xtable 1.8-4 package
+% Thu Oct  3 15:43:48 2019
+\begin{longtable}{llll}
   \toprule
-Username & Secularist/Islamist \\ 
+Username & Secularist/Islamist & Democrat/Authoritarian & Democracy Score \\ 
   \midrule
-slim404 & Secularist\_Tunisia \\ 
-  ooouups & Secularist\_Tunisia \\ 
-  nawaat & Secularist\_Tunisia \\ 
-  psycke & Secularist\_Tunisia \\ 
-  karim2k & Secularist\_Tunisia \\ 
-  riadheh & Secularist\_Tunisia \\ 
-  mira404 & Secularist\_Tunisia \\ 
-  yassayari & Islamist\_Tunisia \\ 
-  sarah\_bh & Secularist\_Tunisia \\ 
-  majdikhan & Secularist\_Tunisia \\ 
-  maramirou & Secularist\_Tunisia \\ 
-  marwen & Secularist\_Tunisia \\ 
-  benmhennilina & Secularist\_Tunisia \\ 
-  slimazzabi & Secularist\_Tunisia \\ 
-  jnayna & Secularist\_Tunisia \\ 
-  azyyoz & Secularist\_Tunisia \\ 
-  arabasta1 & Secularist\_Tunisia \\ 
-  zinga\_ & Secularist\_Tunisia \\ 
-  c\_moii & Secularist\_Tunisia \\ 
-  jasmintn & Secularist\_Tunisia \\ 
-  sans\_url & Secularist\_Tunisia \\ 
-  indigo\_light & Secularist\_Tunisia \\ 
-  takriz & Secularist\_Tunisia \\ 
-  sameh\_b & Secularist\_Tunisia \\ 
-  nayzek & Secularist\_Tunisia \\ 
-  liliopatra & Secularist\_Tunisia \\ 
-  eyaturki & Secularist\_Tunisia \\ 
-  faiyla & Secularist\_Tunisia \\ 
-  zizoo & Secularist\_Tunisia \\ 
-  houeida & Secularist\_Tunisia \\ 
-  malekk & Secularist\_Tunisia \\ 
-  ahlemhc & Secularist\_Tunisia \\ 
-  tom\_z & Secularist\_Tunisia \\ 
-  chiheb12 & Secularist\_Tunisia \\ 
-  zeinebturki & Secularist\_Tunisia \\ 
-  khamousss & Islamist\_Tunisia \\ 
-  may\_mouna & Secularist\_Tunisia \\ 
-  yamenbousrih & Secularist\_Tunisia \\ 
-  ifikra & Secularist\_Tunisia \\ 
-  blech\_klem & Secularist\_Tunisia \\ 
-  emnachebaane & Secularist\_Tunisia \\ 
-  bidules & Secularist\_Tunisia \\ 
-  khalilbm & Secularist\_Tunisia \\ 
-  boukornineblog & Secularist\_Tunisia \\ 
-  out\_\_rage & Secularist\_Tunisia \\ 
-  yhzami & Secularist\_Tunisia \\ 
-  viagramoniak & Secularist\_Tunisia \\ 
-  mounej & Secularist\_Tunisia \\ 
-  maroo\_king & Secularist\_Tunisia \\ 
-  kiffegrave & Secularist\_Tunisia \\ 
-  albawsalatn & Secularist\_Tunisia \\ 
-  nizarus & Secularist\_Tunisia \\ 
-  r\_ghannouchi & Islamist\_Tunisia \\ 
-  nahdhatunisie & Islamist\_Tunisia \\ 
-  ali\_larayedh & Islamist\_Tunisia \\ 
-  yusraghkh & Islamist\_Tunisia \\ 
-  ziedladhari & Islamist\_Tunisia \\ 
-  bassemloukil & Secularist\_Tunisia \\ 
-  mehdi\_jomaa & Secularist\_Tunisia \\ 
-  alaa & Secularist\_Egypt \\ 
-  waelabbas & Secularist\_Egypt \\ 
-  ghonim & Secularist\_Egypt \\ 
-  nawaranegm & Secularist\_Egypt \\ 
-  sandmonkey & Secularist\_Egypt \\ 
-  elbaradei & Secularist\_Egypt \\ 
-  zeinobia & Secularist\_Egypt \\ 
-  3arabawy & Secularist\_Egypt \\ 
-  amrmsalama & Secularist\_Egypt \\ 
-  monasosh & Secularist\_Egypt \\ 
-  kalimakhus & Secularist\_Egypt \\ 
-  drbassemyoussef & Secularist\_Egypt \\ 
-  gamaleid & Secularist\_Egypt \\ 
-  salmaeldaly & Secularist\_Egypt \\ 
-  yosrifouda & Secularist\_Egypt \\ 
-  wael & Secularist\_Egypt \\ 
-  monaeltahawy & Secularist\_Egypt \\ 
-  alyaagad & Secularist\_Egypt \\ 
-  galalamer & Secularist\_Egypt \\ 
-  amrwaked & Secularist\_Egypt \\ 
-  mand0z & Secularist\_Egypt \\ 
-  adel\_salib & Secularist\_Egypt \\ 
-  hazem\_azim & Secularist\_Egypt \\ 
-  ahmadesseily & Secularist\_Egypt \\ 
-  zeinabsamir & Secularist\_Egypt \\ 
-  lilianwagdy & Secularist\_Egypt \\ 
-  5orm & Secularist\_Egypt \\ 
-  sarahcarr & Secularist\_Egypt \\ 
-  gsquare86 & Secularist\_Egypt \\ 
-  minazekri & Secularist\_Egypt \\ 
-  ahmednaguib & Secularist\_Egypt \\ 
-  gemyhood & Secularist\_Egypt \\ 
-  shokeir & Secularist\_Egypt \\ 
-  heshoz & Secularist\_Egypt \\ 
-  mennagamal & Islamist\_Egypt \\ 
-  theboghdady & Secularist\_Egypt \\ 
-  seksek & Secularist\_Egypt \\ 
-  sarahngb & Secularist\_Egypt \\ 
-  thebigpharaoh & Secularist\_Egypt \\ 
-  h\_eid & Secularist\_Egypt \\ 
-  lastoadri & Secularist\_Egypt \\ 
-  rashapress & Secularist\_Egypt \\ 
-  minanaguib90 & Secularist\_Egypt \\ 
-  ahmad\_khalil & Secularist\_Egypt \\ 
-  naguibsawiris & Secularist\_Egypt \\ 
-  mazloum & Secularist\_Egypt \\ 
-  nabilelhalfawy & Secularist\_Egypt \\ 
-  alnagar80 & Secularist\_Egypt \\ 
-  theadly & Secularist\_Egypt \\ 
-  thesherio & Secularist\_Egypt \\ 
-  kalnaga & Secularist\_Egypt \\ 
-  midoo0 & Secularist\_Egypt \\ 
-  dr\_heba\_raouf & Islamist\_Egypt \\ 
-  moftasa & Secularist\_Egypt \\ 
-  ahmdalish & Secularist\_Egypt \\ 
-  theonlywarman & Secularist\_Egypt \\ 
-  pakinamamer & Secularist\_Egypt \\ 
-  zelaky & Secularist\_Egypt \\ 
-  embee & Secularist\_Egypt \\ 
-  ahmada2 & Secularist\_Egypt \\ 
-  ramiii & Secularist\_Egypt \\ 
-  mar3e & Secularist\_Egypt \\ 
-  alaaaswany & Secularist\_Egypt \\ 
-  alienzero & Secularist\_Egypt \\ 
-  salmasaid & Secularist\_Egypt \\ 
-  i3atef & Secularist\_Egypt \\ 
-  loainagati & Secularist\_Egypt \\ 
-  memam8 & Secularist\_Egypt \\ 
-  ayaabdullah & Secularist\_Egypt \\ 
-  bassem\_sabry & Secularist\_Egypt \\ 
-  bothainakamel1 & Secularist\_Egypt \\ 
-  tarekshalaby & Secularist\_Egypt \\ 
-  m3adel & Secularist\_Egypt \\ 
-  amrrodriguez & Secularist\_Egypt \\ 
-  malek & Secularist\_Egypt \\ 
-  etharkamal & Secularist\_Egypt \\ 
-  ssirgany & Secularist\_Egypt \\ 
-  \_\_safi\_\_ & Secularist\_Egypt \\ 
-  hfakhry & Secularist\_Egypt \\ 
-  hamzanamira & Islamist\_Egypt \\ 
-  asmaamahfouz & Secularist\_Egypt \\ 
-  egyptocracy & Secularist\_Egypt \\ 
-  nasry & Secularist\_Egypt \\ 
-  mohamedwaked & Secularist\_Egypt \\ 
-  themiinz & Secularist\_Egypt \\ 
-  muhammadmorsi & Islamist\_Egypt \\ 
-  ikhwanweb & Islamist\_Egypt \\ 
-  mushaweh & Islamist\_Egypt \\ 
-  azzaelgarf & Islamist\_Egypt \\ 
-  asmaaghazalll & Islamist\_Egypt \\ 
-  alnourpartyeg & Islamist\_Egypt \\ 
-  yonosmakhyoun & Islamist\_Egypt \\ 
-  naderbakkar & Islamist\_Egypt \\ 
-  gelhaddad & Islamist\_Egypt \\ 
-  alqaradawy & Islamist\_Egypt \\ 
+slim404 & Secularist & Democratic\_Tunisia & 2.00 \\ 
+  ooouups & Secularist & Democratic\_Tunisia & 1.57 \\ 
+  nawaat & Secularist & Democratic\_Tunisia & 2.00 \\ 
+  psycke & Secularist & Democratic\_Tunisia & 1.83 \\ 
+  karim2k & Secularist & Democratic\_Tunisia & 1.76 \\ 
+  riadheh & Secularist & Democratic\_Tunisia & 1.75 \\ 
+  mira404 & Secularist & Democratic\_Tunisia & 1.81 \\ 
+  yassayari & Islamist & Anti-Democratic\_Tunisia & 1.35 \\ 
+  sarah\_bh & Secularist & Democratic\_Tunisia & 2.26 \\ 
+  majdikhan & Secularist & Democratic\_Tunisia & 1.91 \\ 
+  maramirou & Secularist & Anti-Democratic\_Tunisia & 0.52 \\ 
+  marwen & Secularist & Democratic\_Tunisia & 1.50 \\ 
+  benmhennilina & Secularist & Democratic\_Tunisia & 1.92 \\ 
+  slimazzabi & Secularist & Anti-Democratic\_Tunisia & 1.27 \\ 
+  jnayna & Secularist & Anti-Democratic\_Tunisia & 0.34 \\ 
+  azyyoz & Secularist & Anti-Democratic\_Tunisia & 1.46 \\ 
+  arabasta1 & Secularist & Democratic\_Tunisia & 1.92 \\ 
+  zinga\_ & Secularist & Anti-Democratic\_Tunisia & 0.40 \\ 
+  c\_moii & Secularist & Anti-Democratic\_Tunisia & 0.29 \\ 
+  jasmintn & Secularist & Democratic\_Tunisia & 2.08 \\ 
+  sans\_url & Secularist & Democratic\_Tunisia & 1.74 \\ 
+  indigo\_light & Secularist & Anti-Democratic\_Tunisia & 1.45 \\ 
+  takriz & Secularist & Anti-Democratic\_Tunisia & 0.49 \\ 
+  sameh\_b & Secularist & Democratic\_Tunisia & 1.93 \\ 
+  nayzek & Secularist & Anti-Democratic\_Tunisia & 0.60 \\ 
+  liliopatra & Secularist & Democratic\_Tunisia & 1.78 \\ 
+  eyaturki & Secularist & Democratic\_Tunisia & 1.52 \\ 
+  faiyla & Secularist & Democratic\_Tunisia & 1.49 \\ 
+  zizoo & Secularist & Anti-Democratic\_Tunisia & 1.28 \\ 
+  houeida & Secularist & Anti-Democratic\_Tunisia & 0.98 \\ 
+  malekk & Secularist & Democratic\_Tunisia & 1.54 \\ 
+  ahlemhc & Secularist & Democratic\_Tunisia & 1.99 \\ 
+  tom\_z & Secularist & Anti-Democratic\_Tunisia & 0.38 \\ 
+  chiheb12 & Secularist & Anti-Democratic\_Tunisia & 1.14 \\ 
+  zeinebturki & Secularist & Democratic\_Tunisia & 1.75 \\ 
+  khamousss & Islamist & Democratic\_Tunisia & 2.17 \\ 
+  may\_mouna & Secularist & Democratic\_Tunisia & 1.60 \\ 
+  yamenbousrih & Secularist & Anti-Democratic\_Tunisia & 1.06 \\ 
+  ifikra & Secularist & Anti-Democratic\_Tunisia & 1.25 \\ 
+  blech\_klem & Secularist & Anti-Democratic\_Tunisia & 0.59 \\ 
+  emnachebaane & Secularist & Anti-Democratic\_Tunisia & 0.24 \\ 
+  bidules & Secularist & Democratic\_Tunisia & 1.78 \\ 
+  khalilbm & Secularist & Anti-Democratic\_Tunisia & 1.21 \\ 
+  boukornineblog & Secularist & Democratic\_Tunisia & 2.08 \\ 
+  out\_\_rage & Secularist & Anti-Democratic\_Tunisia & 0.95 \\ 
+  yhzami & Secularist & Anti-Democratic\_Tunisia & 0.77 \\ 
+  viagramoniak & Secularist & Anti-Democratic\_Tunisia & 0.46 \\ 
+  mounej & Secularist & Democratic\_Tunisia & 1.71 \\ 
+  maroo\_king & Secularist & Anti-Democratic\_Tunisia & 0.45 \\ 
+  kiffegrave & Secularist & Anti-Democratic\_Tunisia & 1.04 \\ 
+  albawsalatn & Secularist & Democratic\_Tunisia & 2.00 \\ 
+  nizarus & Secularist & Anti-Democratic\_Tunisia & 1.16 \\ 
+  r\_ghannouchi & Islamist & Anti-Democratic\_Tunisia & 1.20 \\ 
+  nahdhatunisie & Islamist & Anti-Democratic\_Tunisia & 1.16 \\ 
+  yusraghkh & Islamist & Democratic\_Tunisia & 1.54 \\ 
+  ziedladhari & Islamist & Anti-Democratic\_Tunisia & 1.13 \\ 
+  alaa & Secularist & Anti-Democratic\_Egypt & -2.45 \\ 
+  waelabbas & Secularist & Democratic\_Egypt & 2.00 \\ 
+  ghonim & Secularist & Democratic\_Egypt & -0.11 \\ 
+  nawaranegm & Secularist & Anti-Democratic\_Egypt & -3.03 \\ 
+  sandmonkey & Secularist & Anti-Democratic\_Egypt & -1.29 \\ 
+  elbaradei & Secularist & Democratic\_Egypt & -0.74 \\ 
+  zeinobia & Secularist & Anti-Democratic\_Egypt & -1.65 \\ 
+  3arabawy & Secularist & Anti-Democratic\_Egypt & -1.15 \\ 
+  amrmsalama & Secularist & Democratic\_Egypt & -1.02 \\ 
+  monasosh & Secularist & Anti-Democratic\_Egypt & -2.36 \\ 
+  kalimakhus & Secularist & Anti-Democratic\_Egypt & -2.26 \\ 
+  drbassemyoussef & Secularist & Anti-Democratic\_Egypt & -1.07 \\ 
+  gamaleid & Secularist & Anti-Democratic\_Egypt & -2.40 \\ 
+  salmaeldaly & Secularist & Democratic\_Egypt & -1.03 \\ 
+  yosrifouda & Secularist & Democratic\_Egypt & -0.12 \\ 
+  wael & Secularist & Anti-Democratic\_Egypt & -1.63 \\ 
+  monaeltahawy & Secularist & Democratic\_Egypt & -0.60 \\ 
+  alyaagad & Secularist & Anti-Democratic\_Egypt & -1.72 \\ 
+  galalamer & Secularist & Anti-Democratic\_Egypt & -1.30 \\ 
+  amrwaked & Secularist & Anti-Democratic\_Egypt & -1.18 \\ 
+  mand0z & Secularist & Democratic\_Egypt & -0.12 \\ 
+  adel\_salib & Secularist & Anti-Democratic\_Egypt & -1.07 \\ 
+  hazem\_azim & Secularist & Anti-Democratic\_Egypt & -2.75 \\ 
+  ahmadesseily & Secularist & Anti-Democratic\_Egypt & -1.91 \\ 
+  zeinabsamir & Secularist & Democratic\_Egypt & -0.90 \\ 
+  lilianwagdy & Secularist & Anti-Democratic\_Egypt & -1.45 \\ 
+  5orm & Secularist & Anti-Democratic\_Egypt & -1.14 \\ 
+  sarahcarr & Secularist & Democratic\_Egypt & -0.82 \\ 
+  gsquare86 & Secularist & Democratic\_Egypt & -0.78 \\ 
+  minazekri & Secularist & Democratic\_Egypt & -1.01 \\ 
+  ahmednaguib & Secularist & Democratic\_Egypt & 0.01 \\ 
+  gemyhood & Secularist & Anti-Democratic\_Egypt & -1.45 \\ 
+  shokeir & Secularist & Anti-Democratic\_Egypt & -1.49 \\ 
+  heshoz & Secularist & Anti-Democratic\_Egypt & -1.97 \\ 
+  mennagamal & Islamist & Democratic\_Egypt & 1.15 \\ 
+  theboghdady & Secularist & Democratic\_Egypt & 0.03 \\ 
+  seksek & Secularist & Anti-Democratic\_Egypt & -1.53 \\ 
+  sarahngb & Secularist & Democratic\_Egypt & -0.26 \\ 
+  thebigpharaoh & Secularist & Anti-Democratic\_Egypt & -2.09 \\ 
+  lastoadri & Secularist & Democratic\_Egypt & -0.59 \\ 
+  rashapress & Secularist & Anti-Democratic\_Egypt & -1.94 \\ 
+  minanaguib90 & Secularist & Democratic\_Egypt & -0.44 \\ 
+  ahmad\_khalil & Secularist & Anti-Democratic\_Egypt & -2.18 \\ 
+  naguibsawiris & Secularist & Anti-Democratic\_Egypt & -2.00 \\ 
+  mazloum & Secularist & Democratic\_Egypt & 0.52 \\ 
+  nabilelhalfawy & Secularist & Anti-Democratic\_Egypt & -1.77 \\ 
+  alnagar80 & Secularist & Anti-Democratic\_Egypt & -1.60 \\ 
+  theadly & Secularist & Democratic\_Egypt & 0.72 \\ 
+  thesherio & Secularist & Democratic\_Egypt & -0.24 \\ 
+  kalnaga & Secularist & Democratic\_Egypt & 0.02 \\ 
+  dr\_heba\_raouf & Islamist & Democratic\_Egypt & -0.32 \\ 
+  moftasa & Secularist & Democratic\_Egypt & -0.93 \\ 
+  ahmdalish & Secularist & Anti-Democratic\_Egypt & -1.98 \\ 
+  theonlywarman & Secularist & Democratic\_Egypt & 0.50 \\ 
+  pakinamamer & Secularist & Democratic\_Egypt & 0.01 \\ 
+  zelaky & Secularist & Anti-Democratic\_Egypt & -2.32 \\ 
+  embee & Secularist & Democratic\_Egypt & 0.05 \\ 
+  ahmada2 & Secularist & Anti-Democratic\_Egypt & -1.10 \\ 
+  ramiii & Secularist & Democratic\_Egypt & -0.08 \\ 
+  mar3e & Secularist & Anti-Democratic\_Egypt & -1.61 \\ 
+  alaaaswany & Secularist & Anti-Democratic\_Egypt & -2.00 \\ 
+  alienzero & Secularist & Anti-Democratic\_Egypt & -1.20 \\ 
+  salmasaid & Secularist & Anti-Democratic\_Egypt & -1.35 \\ 
+  i3atef & Secularist & Anti-Democratic\_Egypt & -1.77 \\ 
+  loainagati & Secularist & Anti-Democratic\_Egypt & -1.14 \\ 
+  memam8 & Secularist & Anti-Democratic\_Egypt & -1.74 \\ 
+  ayaabdullah & Secularist & Democratic\_Egypt & -1.00 \\ 
+  bassem\_sabry & Secularist & Anti-Democratic\_Egypt & -1.37 \\ 
+  bothainakamel1 & Secularist & Anti-Democratic\_Egypt & -1.77 \\ 
+  tarekshalaby & Secularist & Democratic\_Egypt & -0.22 \\ 
+  m3adel & Secularist & Democratic\_Egypt & -0.19 \\ 
+  amrrodriguez & Secularist & Anti-Democratic\_Egypt & -1.28 \\ 
+  malek & Secularist & Anti-Democratic\_Egypt & -1.68 \\ 
+  etharkamal & Secularist & Democratic\_Egypt & 0.12 \\ 
+  ssirgany & Secularist & Democratic\_Egypt & -0.34 \\ 
+  \_\_safi\_\_ & Secularist & Democratic\_Egypt & 0.02 \\ 
+  hfakhry & Secularist & Democratic\_Egypt & -0.75 \\ 
+  hamzanamira & Islamist & Democratic\_Egypt & 0.56 \\ 
+  asmaamahfouz & Secularist & Anti-Democratic\_Egypt & -1.20 \\ 
+  egyptocracy & Secularist & Democratic\_Egypt & -0.48 \\ 
+  nasry & Secularist & Anti-Democratic\_Egypt & -1.25 \\ 
+  mohamedwaked & Secularist & Anti-Democratic\_Egypt & -1.90 \\ 
+  themiinz & Secularist & Anti-Democratic\_Egypt & -1.21 \\ 
+  muhammadmorsi & Islamist & Democratic\_Egypt & 0.90 \\ 
+  ikhwanweb & Islamist & Democratic\_Egypt & 0.76 \\ 
+  mushaweh & Islamist & Democratic\_Egypt & 1.21 \\ 
+  azzaelgarf & Islamist & Democratic\_Egypt & 1.12 \\ 
+  alnourpartyeg & Islamist & Democratic\_Egypt & 1.20 \\ 
+  yonosmakhyoun & Islamist & Democratic\_Egypt & 1.21 \\ 
+  naderbakkar & Islamist & Democratic\_Egypt & 0.18 \\ 
+  gelhaddad & Islamist & Democratic\_Egypt & 0.59 \\ 
+  alqaradawy & Islamist & Democratic\_Egypt & 1.11 \\ 
    \bottomrule
 \end{longtable}
